fixed spacing and overflow errors

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html,body{
     background-color: black;
-    height:100%;
+    /* height:100%; */
     font-family:  Helvetica, Arial,sans-serif;
 
 }
@@ -8,6 +8,7 @@ html,body{
     background-color: white;
     height:1100px;
     width: 850px;
+    max-width:850px;
     position:relative;
     margin-left:auto;
     margin-right:auto;
@@ -58,4 +59,17 @@ html,body{
 }
 .resume-body{
     display: flex;
+    padding:5%;
+    height:74%; 
+}
+.resume-body-left{
+}
+.resume-body-left-top{
+    height:20%;
+}
+.resume-body-left-middle{
+    height:20%;
+}
+.resume-body-left-bottom{
+    height:20%;
 }
